--- a/css/style.css
+++ b/css/style.css
@@ -7429,7 +7429,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #6b76ff; }
+      border-color: #414690; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -7500,7 +7500,7 @@ h1, h2, h3, h4, h5,
 
 .slider-text h1 {
   font-size: 64px;
-  color: #6b76ff;
+  color: #f1f1f1;
   line-height: 1.2;
   font-weight: 200;
   background: #6b75ff;
@@ -7512,7 +7512,7 @@ h1, h2, h3, h4, h5,
   background: linear-gradient(45deg, #6b75ff 0%, #6b75ff 0%, #59b7ff 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6b75ff', endColorstr='#59b7ff', GradientType=1 );
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; }
+  }
   @media (max-width: 991.98px) {
     .slider-text h1 {
       font-size: 40px; } }
@@ -7558,7 +7558,7 @@ h1, h2, h3, h4, h5,
     font-size: 38px;
     font-weight: 200;
     border-left: 1px solid rgba(0, 0, 0, 0.05);
-    color: #6b76ff; }
+    color: #ffffff; }
     #timer .time:first-child {
       border-left: transparent; }
     #timer .time span {
